--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
-<h>titulo</h>
+<!DOCTYPE html>
+<html lang="pt-br">
+   <head>
+       <meta charset="UTF-8">
+       <title>car x</title>
+</head>
+<body>
+    <h1>car x</h1>
 
-<p>sbdubwub<b>ndjniundinwd</b>duyvudybyuasbd</p>
+    <p>Esse é um site de compra de carro e peças, mais focada em tunagens e carros esportivos, vende suspençoens.</p>
+
