--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 <body>
     <h1>car x</h1>
 
-    <p>Esse é um site de compra de carro e peças, mais focada em tunagens e carros esportivos, vende suspençoens.</p>
+    <p>Esse é um site de compra de carro e peças, mais focada em tunagens e carros esportivos, vende suspençoens, turbos, escapes, e etc.</p>
+
+    <p>Vendemos carros originais tunados e motores ja montados.</p>
+
+    </body>
+    </html>
 
