--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <p>Vendemos carros originais tunados e motores ja montados.</p>
 
     </body>
-   <img= src="mc larem">
+   <img src="mc larem">
     </html>
     
